# gba

./: .gitignore  Cargo.toml  LICENSE  README.md  out.txt
docs/: instruction_cycles.md
src/: arm7tdmi.rs  bus.rs  decode.rs  exec.rs  main.rs  proccore.rs
tests/: README.md  cpu_modules.rs  inst_format_decode.rs  inst_timing.rs  test_arm.rs  thumb_inst_conversion.rs
