[package]
name = "gba"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RepeatedRoot/gba"
description = "A really bad Gameboy Advance emulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
bitpat = "0.1.1"